Changes for 3.0.4rc1

New features:

Bug fixes:
..F....... [ZBX-10789] fixed drawing graphs with items that have scheduling intervals (Cemeris)
...G...... [ZBX-10852] fixed agent compilation on AIX 5.2, AIX 5.3 (wiper)
..F....... [ZBX-10457] fixed copying triggers to groups with multiple hosts or templates (Ivo)
..F....... [ZBX-10872] fixed selection of application in application popup (Cemeris)
........S. [ZBX-10848] fixed applications getting unlinked from undiscovered items (wiper)
.......PS. [ZBX-10819] fixed server/proxy compilation error on Solaris 10 (viktors)
A.F....... [ZBX-9455] fixed length limit for host prototype name (Gunars, Sasha)
..F....... [ZBX-10806] fixed whitespace between elements in host, host mass update, host prototype and proxy forms (Sasha)
..F....... [ZBXNEXT-3263] moved image type selection to top in administration->general->images (Cemeris)
..F....... [ZBXNEXT-3263] added "No data found." message in administration->general->images (Cemeris)
..F....... [ZBX-10731] fixed textarea visibility in monitoring->maps properties (Cemeris)
........S. [ZBX-10723] forced quoting of item key parameter if macro resolution resulted in unquoted parameter with leading spaces (gleb)
..F....... [ZBX-10825] reverted table header capitalization. fixed calendar header (asaveljevs, Pavel)
.......PS. [ZBX-8096] allowed "noSuchName" to be returned for SNMPv2 and SNMPv3 (asaveljevs)
..F....... [ZBX-10794] fixed saving of "Show text as HTML" checkbox in Monitoring->Screens (Cemeris)
..F....... [ZBX-10504] decreased padding and margins in tables and across the whole UI (Pavel)
..F....... [ZBX-10504] added compression of generated CSS files to reduce size from 99K to around 56K (asaveljevs, Pavel)
...GI..... [ZBX-10760] fixed agent, get and sender being erroneously linked against UnixODBC (gleb)
..F....... [ZBX-10647] removed disabled status for "Export to CSV" button (Ivo)
..F....... [ZBX-10679] fixed vertical scrollbar overlapping in messages (Pavel)